# account_manager

./: README.MD
Client/: client.py
database/: Cargo.toml
database/src/: main.rs
encryptor/: Cargo.toml
encryptor/src/: lib.rs  main.rs  middleware.rs  server.rs
middleware/: Cargo.toml  admin.txt
middleware/src/: lib.rs  main.rs  middleware.rs  server.rs
storage/: Cargo.toml
storage/src/: lib.rs  main.rs
