[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.35.0", features = ["bundled"] }
actix-web = "4.10.2"
futures = "0.3.31"
env_logger = "0.11.8"
log = "0.4.27"
local-ip-address = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-multipart = "0.7.2"