[package]
name = "encryptor"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
actix-web = "4.10.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.40"
rand = "0.8.5"
log = "0.4.27"
futures = "0.3.31"
env_logger = "0.11.8"
local-ip-address = "0.6.3"
aes-gcm = "0.10.3"