[package]
name = "middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0"
actix-web = "4.10.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.41"
rand = "0.8.5"
log = "0.4.27"
futures = "0.3.31"
env_logger = "0.11.8"
local-ip-address = "0.6.5"
aes-gcm = "0.10.3"
bcrypt = "0.17"
hex = "0.4.3"
rayon = "1.10.0"